--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
             "email": "asdfg10510588@gmail.com"
         }
     ],
-    "require": {},
+    "require": {
+        "monolog/monolog": "^2.1"
+    },
     "autoload": {
         "psr-4": {
             "Demo\\": "./src/Demo"
